--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "license": "MIT",
   "dependencies": {
     "@nuxt/content": "^1.15.1",
-    "nuxt": "^2.15.8"
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "autoprefixer": "^9.8.8",
+    "nuxt": "^2.15.8",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^2.1.1",
@@ -28,7 +31,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "netlify-cli": "^11.1.0",
     "nuxt-purgecss": "^1.0.0",
-    "postcss": "^8.4.13",
+    "postcss": "^7.0.39",
     "postcss-easing-gradients": "^3.0.1",
     "postcss-preset-env": "^7.8.0",
     "prettier": "^2.6.2",
