--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,4 +1,4 @@
-site_url: https://ntn-boilerplate.netlify.app/
+site_url: https://rococo-pithivier-0fed54.netlify.app
 logo_url: https://ntn-boilerplate.netlify.app/icon.png
 
 publish_mode: editorial_workflow
